# Barcode

./: .gitattributes  .gitignore  BarcodeTest.sln  BarcodeTest.vcxproj  BarcodeTest.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  Detect.cpp  Main.cpp  OpenCV_Debug.props  OpenCV_Release.props  README.md  installOCV.sh  testdemo.cpp  testenv.h
cmake/: .gitignore  CMakeHelper.cmake  buildType.cmake  crossPlatform.cmake  googletest-download.cmake  googletest.cmake
decoder/: AbsDecoder.h  EanDecoder.cpp  EanDecoder.h
include/: Barcode_Color.h  barcode.hpp  barcode_data.hpp  picture_path.h  picture_path.hpp  testenv.h
include/decoder/: AbsDecoder.h  AbsDecoder.hpp  EanDecoder.h  abs_decoder.hpp  absbar_decoder.hpp  absdecoder.hpp  bardecode.hpp  binaryzation.hpp  ean13_decoder.hpp  ean_decoder.hpp  patternmatch.hpp  upcean_decoder.hpp
include/detector/: detect.hpp  detectmulti.hpp
include/opencv2/: barcode.hpp
include/opencv2/decoder/: abs_decoder.hpp  absbar_decoder.hpp  bardecode.hpp  ean13_decoder.hpp  upcean_decoder.hpp
include/opencv2/detector/: detect.hpp
plot/: data.csv  plot.py
samples/: CMakeLists.txt  barcode.cpp
src/: Bardecode.cpp  CMakeLists.txt  Detect.cpp  barcode.cpp  bardecode.cpp  decoder_debug.cpp  detect_debug.cpp  detect_main.cpp  main_debug.cpp  precomp.hpp  preprocess_test.cpp  testenv.cpp
src/decoder/: AbsDecoder.cpp  Bardecoder.cpp  EanDecoder.cpp  abs_decoder.cpp  abs_decoder.hpp  absbar_decoder.cpp  absdecoder.cpp  bardecode.cpp  bardecode.hpp  binaryzation.cpp  ean13_decoder.cpp  ean13_decoder.hpp  ean8_decoder.cpp  ean8_decoder.hpp  ean_decoder.cpp  multidecoders.hpp  patternmatch.cpp  upcean_decoder.cpp  upcean_decoder.hpp
src/decoder/common/: barcodesr.cpp  barcodesr.hpp  hybrid_binarizer.cpp  hybrid_binarizer.hpp  super_scale.cpp  super_scale.hpp  utils.cpp  utils.hpp
src/detector/: bardetect.cpp  bardetect.hpp  detect.cpp  detectmulti.cpp
test/: CMakeLists.txt  basic_test.cpp  binaryzation_test.cpp  hybrid_binarizer.hpp  integration_testing.cpp  main.cpp  main_debug.cpp  patternMatchTest.cpp  test_precomp.hpp  verifier.hpp  verifyer.hpp
test/data/integration_test_data/: correctness.txt  result.csv  testcase_instruction.md
